--- a/custom_components/fs1pg/manifest.json
+++ b/custom_components/fs1pg/manifest.json
@@ -1,4 +1,5 @@
 {
+  "version": "1.1",
   "domain": "fs1pg",
   "name": "GWF-S171 Smart Wifi Plug",
   "documentation": "https://github.com/damianniemiec/fs1pg",
