--- a/custom_components/fs1pg/manifest.json
+++ b/custom_components/fs1pg/manifest.json
@@ -3,6 +3,7 @@
   "domain": "fs1pg",
   "name": "GWF-S171 Smart Wifi Plug",
   "documentation": "https://github.com/damianniemiec/fs1pg",
+  "issue_tracker": "https://github.com/damianniemiec/fs1pg/issues",
   "dependencies": [],
   "codeowners": [],
   "requirements": []
