Updated configuration, moved meters to separated sensor entities

--- a/custom_components/fs1pg/manifest.json
+++ b/custom_components/fs1pg/manifest.json
@@ -6,5 +6,6 @@
   "issue_tracker": "https://github.com/damianniemiec/fs1pg/issues",
   "dependencies": [],
   "codeowners": [],
-  "requirements": []
+  "requirements": [],
+  "config_flow": true
 }
